# Gradient

./: .gitignore  .gitmessage  .next-steps.md  .tmp_smt_header.rs  ADVERSARIAL_ERROR_REVIEW.md  AGENTIC_WORKFLOW_IMPACT.md  AGENT_HANDOFF.md  AGENT_HANDOFF_MODULE_ANALYSIS.md  CHANGELOG.md  CI_WORKFLOW.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_AGENT_MODE.md  LLM_AGENT_HANDOFF.md  PHASE2_HARDENING_PLAN.md  PROGRESS_LOG.md  QUERY_API_IMPACT.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SELF_HOSTING_ROADMAP.md  SELF_HOSTING_STRATEGY.md  STATUS_LOCAL_TRUTH.md  bootstrap_execute.sh  check_bootstrap.sh  comptime-implementation-plan.md  demo_test_efficiency.gr  handoff-deep-research.md  issue_body.md  package-registry-implementation-plan.md  pr-body.md  test_contracts.gr  wasm-implementation-plan.md
codebase/build-system/: Cargo.toml
codebase/build-system/src/: lockfile.rs  main.rs  manifest.rs  name_validation.rs  project.rs  resolver.rs  zip_safe.rs
codebase/build-system/src/commands/: add.rs  bench.rs  bindgen.rs  build.rs  check.rs  doc.rs  doc_html.rs  fetch.rs  fmt.rs  init.rs  install.rs  mod.rs  new.rs  plugin.rs  publish.rs  registry.rs  repl.rs  run.rs  test.rs  update.rs
codebase/build-system/src/registry/: anchor.rs  client.rs  github.rs  mod.rs  semver.rs
codebase/build-system/templates/: gradient.toml  main.gr
codebase/build-system/tests/: actor_runtime.rs  alloc_runtime.rs  allocator_runtime.rs  async_runtime.rs  bindgen_integration.rs  manifest_surface.rs  panic_runtime.rs  plugin_dispatch.rs  size_budget.rs
codebase/compiler/: Cargo.toml  hello_test  lexer.gr  runtime.c  token.gr
codebase/compiler/examples/: query_api_demo.rs
codebase/compiler/runtime/: gradient_runtime.c
codebase/compiler/runtime/actor/: README.md  runtime_actor_full.c  runtime_actor_none.c
codebase/compiler/runtime/alloc/: README.md  runtime_alloc_full.c  runtime_alloc_minimal.c
codebase/compiler/runtime/allocator/: README.md  runtime_allocator_arena.c  runtime_allocator_bumpalo.c  runtime_allocator_default.c  runtime_allocator_pluggable.c  runtime_allocator_slab.c
codebase/compiler/runtime/async/: README.md  runtime_async_full.c  runtime_async_none.c
codebase/compiler/runtime/panic/: README.md  runtime_panic_abort.c  runtime_panic_none.c  runtime_panic_unwind.c
codebase/compiler/src/: bootstrap_ast_bridge.rs  bootstrap_checker_env.rs  bootstrap_collections.rs  bootstrap_driver.rs  bootstrap_ir_bridge.rs  bootstrap_ir_emit.rs  bootstrap_lexer_bridge.rs  bootstrap_lsp.rs  bootstrap_parser_bridge.rs  bootstrap_pipeline.rs  bootstrap_query.rs  context_budget.rs  eight_module_test.rs  fmt.rs  kernel_boundary.rs  lib.rs  main.rs  query.rs  repl.rs  resolve.rs
codebase/compiler/src/agent/: handlers.rs  mod.rs  protocol.rs  server.rs
codebase/compiler/src/ast/: block.rs  expr.rs  item.rs  mod.rs  module.rs  span.rs  stmt.rs  types.rs
codebase/compiler/src/backend/: mod.rs  wasm.rs
codebase/compiler/src/codegen/: cranelift.rs  llvm.rs  mod.rs  wasm.rs
codebase/compiler/src/comptime/: evaluator.rs  mod.rs  value.rs
codebase/compiler/src/ir/: instruction.rs  mod.rs  types.rs
codebase/compiler/src/lexer/: lexer.rs  mod.rs  tests.rs  token.rs
codebase/compiler/src/parser/: error.rs  mod.rs  parser.rs  recovery.rs  tests.rs
codebase/compiler/src/smt/: encoder.rs  error.rs  mod.rs  solver.rs
codebase/compiler/src/typechecker/: checker.rs  effects.rs  env.rs  error.rs  mod.rs  smt.rs  stdlib_tier.rs  tests.rs  types.rs  vc.rs
codebase/compiler/stdlib/: arena.gradient  core_arith_ops.gr  core_assoc_ops.gr  core_bool.gr  core_chain_ops.gr  core_compare.gr  core_inequality_chain_ops.gr  core_int_ops.gr  core_interval_ops.gr  core_math.gr  core_neg_ops.gr  core_order_ops.gr  core_pair_ops.gr  core_parity_ops.gr  core_select_ops.gr  core_successor_ops.gr  core_swap_ops.gr  core_witness_ops.gr  core_zero_one_ops.gr
codebase/compiler/tests/: actual_bootstrap_execution.rs  arithmetic.gr  bench_annotation.gr  bool_if.gr  bootstrap_extern_registration.rs  bootstrap_test.rs  bootstrap_trust_checks.rs  cli_asm.rs  cli_debug_dump_ir_gate.rs  comptime_integration_tests.rs  cranelift_f64_variadic_fix.rs  embedded_allocator_arena.gr  embedded_allocator_bumpalo.gr  embedded_allocator_pluggable.gr  embedded_allocator_slab.gr  embedded_no_actor.gr  embedded_no_async.gr  embedded_no_heap.gr  embedded_no_panic.gr  enum_basic.gr  exit_demo.gr  experimental_gating.rs  factorial.gr  fibonacci.gr  file_io.gr  file_io_tests.rs  hello_e2e.gr  http_client.gr  if_expression.gr  import_sandbox_tests.rs  ir_differential_tests.rs  kernel_boundary_metrics.rs  llvm_backend_integration.rs  llvm_scaffold_smoke.rs  map_data_structure_tests.rs  match_arm_body_tests.rs  match_bool.gr  match_int.gr  math_builtins.gr  memory_model_integration.rs  (+62 more)
codebase/compiler/tests/bootstrap_trust_corpus/: 02_multi_function.gr  03_let_bindings.gr  04_function_calls.gr  05_boolean_logic.gr  06_comparisons.gr  07_unary_ops.gr  08_nested_let.gr  09_if_else.gr  100_arith_identities_chain.gr  101_negation_double_unwind.gr  102_ladder_recursion_pipeline.gr  103_compare_neg_arith_blend.gr  104_seven_fn_mutual_rec.gr  105_long_bool_chain_negations.gr  106_eight_fn_mutual_rec.gr  107_div_mod_identity_pipeline.gr  108_compare_let_and_reduce.gr  109_nested_call_arith_identities.gr  10_mutual_recursion.gr  110_arith_or_bool_chain.gr  111_nine_fn_mutual_rec.gr  112_recursion_with_nested_let.gr  113_signed_branch_truth.gr  114_compare_let_pipeline_v2.gr  115_ten_fn_mutual_rec.gr  116_deep_nested_if_arith_tree.gr  117_bool_chain_into_multi_arg_call.gr  118_arith_id_mod_pipeline.gr  119_compare_let_recursive_chain.gr  11_nested_function_calls.gr  120_eleven_fn_mutual_rec.gr  121_double_call_arith.gr  122_compare_and_or_truth.gr  123_let_chain_with_recursion.gr  124_signed_arith_pipeline.gr  125_twelve_fn_mutual_rec.gr  126_four_input_truth_table.gr  (+161 more)
codebase/devtools/lsp/: Cargo.toml
codebase/fuzz/: Cargo.toml
codebase/fuzz/fuzz_targets/: check_random_module.rs  lex_random_bytes.rs  lower_random_module.rs  parse_random_text.rs
(+223 files in other folders)
