[package]
name = "gradient"
version = "0.1.0"
edition = "2021"
description = "The Gradient programming language CLI"
license = "MIT"

[[bin]]
name = "gradient"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
gradient-compiler = { path = "../compiler" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
zip = "0.6"
tempfile = "3"
