[package]
name = "gradient-compiler"
version = "0.1.0"
edition = "2021"
description = "The Gradient programming language compiler backend"
license = "MIT"

# The compiler backend for the Gradient language.
#
# Architecture:
#   1. Frontend (lexer/parser/typechecker) produces an AST
#   2. AST is lowered to our custom IR (see src/ir/)
#   3. The codegen layer (see src/codegen/) translates IR -> Cranelift IR -> native object file
#   4. The object file is linked with libc via `cc` to produce a final binary

[dependencies]
# Cranelift code generator — the core compilation engine that turns Cranelift IR
# into machine code for the target architecture.
cranelift-codegen = "0.129.1"

# WASM encoder — for emitting WebAssembly binary format.
# Used by the WASM backend to produce .wasm files.
wasm-encoder = { version = "0.200", optional = true }

# Cranelift frontend — provides the FunctionBuilder API for constructing Cranelift
# IR in SSA form without manually managing block parameters and value numbering.
cranelift-frontend = "0.129.1"

# Cranelift module — abstraction layer for managing multiple functions and data
# objects as a compilation unit (module). Provides the Module trait.
cranelift-module = "0.129.1"

# Cranelift object — an implementation of the Module trait that emits native
# object files (.o) using the `object` crate. These can be linked with `cc`.
cranelift-object = "0.129.1"

# Target lexicon — provides types for LLVM-style target triples (arch-vendor-os).
# Used to configure Cranelift for the host or cross-compilation targets.
target-lexicon = "0.13.5"

# Serde — serialization framework for the structured query API. All compiler
# outputs (diagnostics, type info, symbol tables) are serializable to JSON
# so that AI agents can consume them programmatically.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enable the LLVM backend for optimized release builds.
# Requires LLVM libraries to be installed on the system.
# Usage: cargo build --features llvm
llvm = ["inkwell"]
# Enable SMT-based static contract verification.
# Requires Z3 to be installed on the system.
smt = ["z3"]
# Enable the WASM backend for WebAssembly output.
# Usage: cargo build --features wasm
wasm = ["wasm-encoder"]
# Enable all backends.
all-backends = ["llvm", "smt", "wasm"]

[dependencies.inkwell]
# LLVM bindings for Rust. Only compiled when the `llvm` feature is enabled.
# Requires a compatible LLVM installation (see inkwell docs for version matrix).
version = "0.5"
features = ["llvm18-0"]
optional = true

[dependencies.z3]
# Z3 SMT solver for static contract verification.
# Enables compile-time proof of contract conditions.
version = "0.12"
optional = true

[dependencies.uuid]
# UUID generation for session IDs.
version = "1"
features = ["v4"]

[dev-dependencies]
# Temporary directories for multi-file module resolution tests.
tempfile = "3"
