[package]
name = "gradient-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for the Gradient programming language"
license = "MIT"

[[bin]]
name = "gradient-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gradient-compiler = { path = "../../compiler" }
